Add nested views
As prep for implementing navbar.

--- a/src/app/components/admin/admin.route.html
+++ b/src/app/components/admin/admin.route.html
@@ -3,6 +3,8 @@
     Glass
   </md-toolbar>
   <div layout="row">
-    <glass-login flex></glass-login>
+    <md-content layout-padding ng-cloak>
+
+    </md-content>
   </div>
 </div>
