--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -2,15 +2,16 @@
 
   <md-toolbar layout="row" layout-align="center center">
     Glass
-    <md-button ng-click="main.logout()">Logout</md-button>
+    <md-button ng-show="main.isLoggedIn()" ng-click="main.logout()">Logout</md-button>
   </md-toolbar>
   <div layout="row">
-    <md-sidenav md-is-locked-open="true" class="md-whiteframe-z2">
+    <md-sidenav ng-show="main.isLoggedIn()" md-is-locked-open="true" class="md-whiteframe-z2">
       <md-button>Search</md-button>
       <md-button>History</md-button>
       <md-button>Admin</md-button>
       <md-button>Help</md-button>
-    </md-sidenav>    
+    </md-sidenav>
+    <div ui-view flex></div>
   </div>
   
 </div>
