--- a/src/app/components/admin/admin.html
+++ b/src/app/components/admin/admin.html
@@ -1,18 +1,16 @@
-<md-content layout-padding ng-cloak>
-  <md-tabs>
-    <md-tab label="Users">
-      <md-list>
-        <md-list-item ng-repeat="user in admin.users">
-          {{user.userName}}
-        </md-list-item>
-      </md-list>
-    </md-tab>
-    <md-tab label="Sessions">
-      <md-list>
-        <md-list-item ng-repeat="session in admin.sessions">
-          {{session}}
-        </md-list-item>
-      </md-list>
-    </md-tab>
-  </md-tabs>
-</md-content>
+<md-tabs flex>
+  <md-tab label="Users">
+    <md-list>
+      <md-list-item ng-repeat="user in admin.users">
+        <p>{{user}}</p>
+      </md-list-item>
+    </md-list>
+  </md-tab>
+  <md-tab label="Sessions">
+    <md-list>
+      <md-list-item ng-repeat="session in admin.sessions">
+        <p>{{session}}</p>
+      </md-list-item>
+    </md-list>
+  </md-tab>
+</md-tabs>
