--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,15 +1,21 @@
-<div layout="column" flex>
-  <md-toolbar layout="row" layout-align="center center">
-    Glass
-    <md-button ng-show="main.isLoggedIn()" ng-click="main.logout()">Logout</md-button>
-  </md-toolbar>
-  <div layout="row" flex>
-    <md-sidenav ng-show="main.isLoggedIn()" layout="column" md-is-locked-open="true" md-whiteframe="2">
-      <md-button>Search</md-button>
-      <md-button>History</md-button>
-      <md-button ng-show="main.hasAdminPrivileges()" ng-click="main.showAdmin()">Admin</md-button>
-      <md-button>Help</md-button>
-    </md-sidenav>
+<div layout="row" flex>
+  <md-sidenav ng-show="main.isLoggedIn()" layout="column" md-is-locked-open="true" md-whiteframe="1">
+    <md-toolbar layout-align="center center">Glass</md-toolbar>
+    <md-button ng-click="main.showSearch()">Search</md-button>
+    <md-button ng-click="main.showQueryBuilder()">Query Builder</md-button>
+    <md-button ng-click="main.showHistory()">History</md-button>
+    <md-button ng-show="main.hasAdminPrivileges()" ng-click="main.showAdmin()">Admin</md-button>
+    <md-button ng-click="main.showHelp()">Help</md-button>
+  </md-sidenav>
+  <div layout="column" flex>
+    <md-toolbar>
+      <div ng-hide="main.isLoggedIn()" layout="row" layout-align="center center" flex>Glass</div>
+      <div ng-show="main.isLoggedIn()" layout="row" layout-align="center center" flex>
+        <span flex></span>
+        <md-button md-no-ink>Logged in as {{main.loggedInUserName()}}</md-button>
+        <md-button ng-click="main.logout()">Logout</md-button>
+      </div>
+    </md-toolbar>
     <div layout="row" layout-padding flex="100" ui-view></div>
-  </div>
+    </div>
 </div>
