initial search and about

--- a/src/app/components/admin/changePasswordDialog.template.html
+++ b/src/app/components/admin/changePasswordDialog.template.html
@@ -11,14 +11,14 @@
     </md-toolbar>
     <md-dialog-content layout-padding>
       <div layout="row" layout-margin>
-        <md-input-container md-block>
+        <md-input-container class="md-block">
           <label>Password</label>
           <input name="password" type="password" ng-model="vm.password" required md-autofocus>
           <div ng-messages="vm.changePasswordForm.password.$error">
             <div ng-message="required">Password is required.</div>
           </div>
         </md-input-container>
-        <md-input-container md-block>
+        <md-input-container class="md-block">
           <label>Confirm Password</label>
           <input name="passwordConfirmation" type="password" ng-model="vm.passwordConfirmation" match="vm.password">
           <div ng-messages="vm.changePasswordForm.passwordConfirmation.$error">
