--- a/src/app/components/admin/admin.html
+++ b/src/app/components/admin/admin.html
@@ -1,4 +1,4 @@
-<md-tabs flex>
+<md-tabs flex layout-padding>
   <md-tab label="Users" md-on-select="admin.refreshUsers()">
     <div layout="column" style="margin: 32px 64px 32px 64px" md-whiteframe="3">
       <md-toolbar layout-fill layout-align="center center">
