--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,12 +1,12 @@
 <div layout="row" flex>
-  <md-sidenav ng-show="main.isLoggedIn()" layout="column" md-is-locked-open="true" md-whiteframe="1">
+  <md-sidenav ng-show="main.isLoggedIn()" layout="column" md-is-locked-open="true" md-whiteframe="1" flex="none">
     <md-toolbar layout-align="center center">Glass</md-toolbar>
     <md-button ng-click="main.showSearch()">Search</md-button>
     <md-button ng-click="main.showHistory()">History</md-button>
     <md-button ng-show="main.hasAdminPrivileges()" ng-click="main.showAdmin()">Admin</md-button>
-    <md-button ng-click="main.showHelp()">Help</md-button>
+    <md-button ng-click="main.showAbout()">About</md-button>
   </md-sidenav>
-  <div layout="column" flex>
+  <div layout="column" flex="100">
     <md-toolbar>
       <div ng-hide="main.isLoggedIn()" layout="row" layout-align="center center" flex>Glass</div>
       <div ng-show="main.isLoggedIn()" layout="row" layout-align="center center" flex>
@@ -15,6 +15,6 @@
         <md-button ng-click="main.logout()">Logout</md-button>
       </div>
     </md-toolbar>
-    <div layout="row" layout-padding flex="100" ui-view></div>
+    <md-content layout="row" flex ui-view></md-content>
     </div>
 </div>
