--- a/src/app/components/about/about.html
+++ b/src/app/components/about/about.html
@@ -1,10 +1,10 @@
-<div layout="column">
-  <div layout="row" layout-align="center center" layout-padding flex>
+<md-content flex>
+  <div layout="row" layout-align="center center" layout-padding layout-margin flex>
     <span flex></span>
     <h3 class="md-title">Built on Amazing Open Source Web Technologies</h3>
     <span flex></span>
   </div>
-  <div layout="row" layout-wrap>
+  <div layout="row" layout-margin layout-wrap layout-align="center center">
     <md-card flex="30" ng-repeat="awesomeThing in about.awesomeThings | orderBy:'rank'">
       <md-card-title>
         <md-card-title-text>
@@ -14,7 +14,7 @@
           <img ng-src="assets/images/{{ awesomeThing.logo }}" style="width: 100px" alt="{{ awesomeThing.title }}">
         </md-card-title-media>
       </md-card-title>
-      <md-card-content>
+      <md-card-content flex>
         <p>{{ awesomeThing.description }}</p>            
       </md-card-content>
       <md-card-actions layout="row" layout-align="end center">
@@ -22,4 +22,4 @@
       </md-card-actions>
     </md-card>
   </div>
-</div>
+</md-content>
