[lint] remove extra period

--- a/src/app/components/search/search.html
+++ b/src/app/components/search/search.html
@@ -17,7 +17,7 @@
       </md-chips>
     </div>
     <div layout="row" layout-margin layout-padding ng-show="search.status">
-      {{search.status}}.
+      {{search.status}}
     </div>
   </div>
 </div>
