[feat] warnings should appear as toast

--- a/src/app/components/search/addWithinLastCriterionDialog.template.html
+++ b/src/app/components/search/addWithinLastCriterionDialog.template.html
@@ -14,7 +14,7 @@
         <div layout="row">
           <md-input-container flex="33">
             <label>Within Last</label>
-            <input name="withinAmount" ng-model="vm.withinAmount" type="number" required>
+            <input name="withinAmount" ng-model="vm.withinAmount" type="number" md-autofocus required>
           </md-input-container>
           <md-input-container flex="66">
             <label>Units</label>
