--- a/src/app/components/search/search.html
+++ b/src/app/components/search/search.html
@@ -21,7 +21,7 @@
     </div>
   </div>
   <md-divider></md-divider>
-  <div flex id="results">
+  <div>
     <md-virtual-repeat-container dynamic-height>
       <div md-virtual-repeat="result in search.results" md-on-demand ng-click="search.showResult(result)">
         <div layout="row" layout-align="start center" layout-margin layout-padding>
