[bug] missing time picker

--- a/src/app/components/search/addWithinCriterionDialog.template.html
+++ b/src/app/components/search/addWithinCriterionDialog.template.html
@@ -26,6 +26,9 @@
         <div layout-fill>
           <mdp-date-picker name="date" mdp-placeholder="of" mdp-open-on-click required mdp-format="MM/DD/YYYY" ng-model="vm.date"></mdp-date-picker>
         </div>
+        <div layout-fill>
+          <mdp-time-picker name="time" mdp-placeholder="optional time" mdp-auto-switch=true ng-model="vm.time"></mdp-time-picker>
+        </div>
       </div>
     </md-dialog-content>
     <md-dialog-actions>
